# sitemapper

./: .gitignore  README.md  TEST_MODE.md  demo_test_mode.py  pyproject.toml  sitemapper-test.toml  sitemapper.toml  test_logging.py  test_solr_client.py
.kiro/specs/solr-sitemap-generator/: design.md  requirements.md  tasks.md
.kiro/steering/: llm-guidelines.md  project-tools.md
scripts/: install-service.sh  monitor-sitemapper.sh
src/sitemapper/: __init__.py  circuit_breaker.py  cli.py  config.py  exceptions.py  logging.py  orchestrator.py  progress.py  service.py  sitemap_generator.py  solr_client.py  types.py  url_builder.py
templates/config/: sitemapper-example.toml
templates/cron/: sitemapper.cron
templates/systemd/: sitemapper.service  sitemapper.timer
